# otus

./: .travis.yml  CMakeLists.txt  README.md  auto_test.cpp  auto_test_2.cpp  gtest_version.cpp  lib.cpp  lib.h  main.cpp  test_version.cpp
task_1/: CMakeLists.txt  main.cpp  test_version.cpp
task_2/: gtest.cpp  lib.cpp  lib.h  old_main.cpp
task_3/: CMakeLists.txt  allocator.cpp  custom_array.h  fixsize_logging_allocator.h  gtest.cpp  lib.cpp  logging_allocator.h
task_4/: CMakeLists.txt  doxygen.cpp  gtest.cpp  lib.cpp  lib.h
